--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
   </header>
-  <div class="raw bg-primary">
+  <div class="raw" id="slider">
     <div class="container">
       <div id="carouselExample" class="carousel slide"  data-bs-ride="true">
         <div class="carousel-inner">
