--- a/index.html
+++ b/index.html
@@ -45,18 +45,30 @@
       </div>
     </div>
   </header>
-  <div class="raw" id="slider">
+  <div class="raw p-2" id="slider">
     <div class="container">
       <div id="carouselExample" class="carousel slide"  data-bs-ride="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./img/slide1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <a href="#"> <h4> First slide label </h4> </a>
+              <p class="lead">Some representative placeholder content for the first slide.</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="./img/slide2.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <a href="#"> <h4> Second slide label </h4> </a>
+              <p class="lead">Some representative placeholder content for the first slide.</p>
+            </div>
           </div>
           <div class="carousel-item">
             <img src="./img/slide3.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <a href="#"> <h4> Thired slide label </h4> </a>
+              <p class="lead">Some representative placeholder content for the first slide.</p>
+            </div>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -71,47 +83,6 @@
 
 
 
-      <!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="true>
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./img/slide1.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/slide2.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="./img/slide3.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div> -->
-
-
-
     </div>
   </div>
 
@@ -122,7 +93,7 @@
       const myCarouselElement = document.querySelector('#carouselExample')
 
       const carousel = new bootstrap.Carousel(myCarouselElement, {
-        interval: 3000,
+        interval: 1000,
         touch: false
       })
 
