--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       </div>
     </div>
   </header>
+
+
   <div class="raw p-2" id="slider">
     <div class="container">
       <div id="carouselExample" class="carousel slide"  data-bs-ride="true">
@@ -85,6 +87,25 @@
 
     </div>
   </div>
+
+
+  <div id="main">
+    <div class="container">
+      <div class="row p-2">
+        <div class="col-md-9 left p-0 pe-2">
+          <div class="body">
+
+          </div>
+        </div>
+        <div class="col-md-3 right p-0">
+          <div class="notice">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="./js/bootstrap.min.js"></script>
