--- a/index.html
+++ b/index.html
@@ -91,15 +91,13 @@
 
   <div id="main">
     <div class="container">
-      <div class="row p-2">
-        <div class="col-md-9 left p-0 pe-2">
+      <div class="row p-1">
+        <div class="col-md-9 left p-1">
           <div class="body">
-
           </div>
         </div>
-        <div class="col-md-3 right p-0">
+        <div class="col-md-3 right p-1">
           <div class="notice">
-
           </div>
         </div>
       </div>
