--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="raw">
         <nav class="navbar navbar-expand-lg mybg">
           <div class="container-fluid">
-            <a class="navbar-brand text-light" href="#"><img src="./img/logo.png" alt="varsity logo" id="logo"></a>
+            <a class="navbar-brand text-success" href="#"><img src="./img/logo.png" alt="varsity logo" id="logo"></a>
             <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
