--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
             </button>
             <div class="collapse navbar-collapse " id="navbarSupportedContent">
               <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0 mybg">
-                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">Home</a></li>
-                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">Home</a></li>
-                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">Home</a></li>
-                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">Home</a></li>
-                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">Home</a></li>
-                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">Home</a></li>
-                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">Home</a></li>
+                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">HOME</a></li>
+                <li class="nav-item ddmp">
+                  <a class="nav-link rounded-2 myfs" aria-current="page" href="#">ACADEMIC</a>
+                  <ul class="ddmu">
+                    <li class="ddml"><a href="" class="ddma"> School of Business</a></li>
+                    <li class="ddml"><a href="" class="ddma"> School of Social Science</a></li>
+                    <li class="ddml"><a href="" class="ddma"> School of Law and Justice</a></li>
+                    <li class="ddml"><a href="" class="ddma"> School of Natural Science and Engineering</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">AUTHORITY</a></li>
+                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">FACULTY</a></li>
+                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#"> ADMISSION</a></li>
+                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">RESEARCH</a></li>
+                <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">VERIFICATION</a></li>
                 <li class="nav-item dropdown ">
                   <a class="nav-link dropdown-toggle myfs rounded-2 myfs" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" id="ddb1">
                     Dropdown
