--- a/index.html
+++ b/index.html
@@ -24,36 +24,28 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0 mybg">
                   <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">HOME</a></li>
-                  <li class="nav-item dropdown ddmp">
-                    <a class="nav-link dropdown-toggle rounded-2 myfs" href="#" role="button" onclick="myFunction()" data-bs-toggle="dropdown" aria-expanded="false">ACADEMIC</a>
-                    </button>
-                    <!-- for pc -->
-                    <ul class=" ddmu" id="abcd">
-                      <li class="ddml"><a href="" class="ddma"> School of Business</a></li>
-                      <li class="ddml"><a href="" class="ddma"> School of Social Science</a></li>
-                      <li class="ddml"><a href="" class="ddma"> School of Law and Justice</a></li>
-                      <li class="ddml"><a href="" class="ddma"> School of Natural Science and Engineering</a></li>
-                    </ul>
-                    <!-- for mbl  -->
-                    <ul class="dropdown-menu ddmb mybg">
-                      <li><a class="dropdown-item myfs2" href="#">School of Business</a></li>
-                      <li><a class="dropdown-item myfs2" href="#">School of Social Science</a></li>
-                      <li><a class="dropdown-item myfs2" href="#">School of Law and Justice</a></li>
-                      <li><a class="dropdown-item myfs2" href="#">School of Natural Science and Engineering</a></li>
-                    </ul>
-                  </li>
 <!-- ____________________________________________________________________________________________________________________________________________________________________________________________________________ -->
                   <li class="nav-item dropdown ddmp">
-                    <a class="nav-link dropdown-toggle rounded-2 myfs" id="ddmp" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">ACADEMIC</a>
-                    </button>
+                    <a class="nav-link dropdown-toggle rounded-2 myfs " id="ddb0" href="#" role="button" >AUTHORITY</a>
                     <!-- for pc -->
-                    <ul class=" ddmu" id="ddmu">
+                    <ul class=" ddmu" id="ddm0">
                       <li class="ddml"><a href="" class="ddma"> Board of Trustees  </a></li>
                       <li class="ddml"><a href="" class="ddma"> Board of Advisors  </a></li>
                       <li class="ddml"><a href="" class="ddma"> Syndicate  </a></li>
                       <li class="ddml"><a href="" class="ddma">  Academic Council </a></li>
                       <li class="ddml"><a href="" class="ddma"> Proctorial body  </a></li>
                       <li class="ddml"><a href="" class="ddma">  Complaint Committee </a></li>
+                    </ul>
+                  </li>
+<!-- ____________________________________________________________________________________________________________________________________________________________________________________________________________ -->
+                  <li class="nav-item dropdown ddmp">
+                    <a class="nav-link dropdown-toggle rounded-2 myfs " id="ddb1" href="#" role="button" >ACADEMIC</a>
+                    <!-- for pc -->
+                    <ul class=" ddmu" id="ddm1">
+                      <li class="ddml"><a href="" class="ddma"> School of Business</a></li>
+                      <li class="ddml"><a href="" class="ddma"> School of Social Science</a></li>
+                      <li class="ddml"><a href="" class="ddma"> School of Law and Justice</a></li>
+                      <li class="ddml"><a href="" class="ddma"> School of Natural Science and Engineering</a></li>
                     </ul>
                   </li>
 <!-- ____________________________________________________________________________________________________________________________________________________________________________________________________________ -->
@@ -149,11 +141,19 @@
 
   </script>
   <script>
-      document.querySelector('#ddmp').addEventListener('click', () => {
-        if(document.querySelector('#ddmu').classList.contains('ddm_show')){
-          document.querySelector('#ddmu').classList.remove('ddm_show');
+      document.querySelector('#ddb1').addEventListener('click', () => {
+        if(document.querySelector('#ddm1').classList.contains('ddm_show')){
+          document.querySelector('#ddm1').classList.remove('ddm_show');
         }else{
-          document.querySelector('#ddmu').classList.add('ddm_show');
+          document.querySelector('#ddm1').classList.add('ddm_show');
+        }
+      });
+
+      document.querySelector('#ddb0').addEventListener('click', () => {
+        if(document.querySelector('#ddm0').classList.contains('ddm_show')){
+          document.querySelector('#ddm0').classList.remove('ddm_show');
+        }else{
+          document.querySelector('#ddm0').classList.add('ddm_show');
         }
       });
   </script>
