--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </header>
 
 
-  <div class="raw p-2" id="slider">
+  <!-- <div class="raw p-2" id="slider">
     <div class="container">
       <div id="carouselExample" class="carousel slide"  data-bs-ride="true">
         <div class="carousel-inner">
@@ -99,13 +99,13 @@
 
 
     </div>
-  </div>
+  </div> -->
 
 
   <div id="main">
     <div class="container">
       <div class="row p-1">
-        <div class=" col-lg-9 col-md-7 left p-1">
+        <div class=" col-lg-9 col-md-7 left p-0 pe-1">
           <div class="body p-2">
             <nav class="breadcrumb p-2 rounded-2">
               <a class="breadcrumb-item" href="#">Main</a>
@@ -115,7 +115,7 @@
             
           </div>
         </div>
-        <div class="col-lg-3 col-md-5 right p-1">
+        <div class="col-lg-3 col-md-5 right p-0">
           <div class="notice p-2">
             <nav class="breadcrumb p-2 rounded-2">
               <span class="breadcrumb-item active" aria-current="page">Notice</span>
