--- a/index.html
+++ b/index.html
@@ -137,27 +137,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="./js/bootstrap.min.js"></script>
-  <script>
-
-      const myCarouselElement = document.querySelector('#carouselExample')
-
-      const carousel = new bootstrap.Carousel(myCarouselElement, {
-        interval: 2000,
-        touch: false
-      })
-
-  </script>
-  <script>
-
-      function dropMBL(id){
-        if(document.querySelector(id).classList.contains('ddm_show')){
-          document.querySelector(id).classList.remove('ddm_show');
-        }else{
-          document.querySelector(id).classList.add('ddm_show');
-        }
-      }
-
-  </script>
+  <script src="./script.js"></script>
+  
 
 
 </body>
