--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="mybg">
-    <div class="container">
+  <header class="header">
+    <div class="container mybg">
       <div class="row">
         <div class="col-lg-3 col-md-4">
-          <a class="navbar-brand text-success" href="#"><img src="./img/logo.png" alt="varsity logo" id="logo"></a>
+          <a class="p-2" href="#"><img class="p-2" src="./img/logo.png" alt="varsity logo" id="logo"></a>
         </div>
         <div class="col-lg-9 col-md-12">
           <nav class="navbar navbar-expand-md mybg">
@@ -60,6 +60,15 @@
   </header>
 
 
+  <div class="menu">
+    <div class="container">
+      <div class="row">
+        ___________________________________
+      </div>
+    </div>
+  </div>
+
+
   <!-- <div class="raw p-2" id="slider">
     <div class="container">
       <div id="carouselExample" class="carousel slide"  data-bs-ride="true">
@@ -104,7 +113,7 @@
 
   <div id="main">
     <div class="container">
-      <div class="row p-1">
+      <div class="row">
         <div class=" col-lg-9 col-md-7 left p-0 pe-1">
           <div class="body p-2">
             <nav class="breadcrumb p-2 rounded-2">
@@ -133,6 +142,40 @@
       </div>
     </div>
   </div>
+
+
+  <div class="footer ">
+    <div class="container">
+      <div class="row  p-2 ">
+        <div class="col-lg-4 left">
+          <h5>Contact Us</h5>
+            <p> <b>Address :</b> Telihaor, Sheikhghat, Sylhet-3100 <br>
+              <b> Tel :  </b> +880 02996631220 <br>
+              <b>Enail :</b> info@neub.edu.bd <br>
+              <b>Mobile :</b> 01755566994 <br>
+              <b>Web :</b> www.neub.edu.bd <br>
+            </p>
+        </div>
+        <div class="col-lg-3 right">
+          <h5>Useful Links</h5>
+          <ul>
+            <li><a href="">University Grants Commission</a></li>
+            <li><a href="">Ministry of Education</a></li>
+            <li><a href="">Sylhet City Corporation </a></li>
+            <li><a href="">HEQEP </a></li>
+            <li><a href="">Disclaimer </a></li>
+            <li><a href="">Sitemap </a></li>
+          </ul>
+        </div>
+        <div class="col-lg-5 m-auto rounded-2 map">
+          <h5>Find Us on Map</h5>
+          <iframe class="rounded-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.2311622569273!2d91.85876681548714!3d24.89009548403999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751aacd70cd7665%3A0xc8ae330ad72490dd!2sNorth%20East%20University%20Bangladesh!5e0!3m2!1sen!2sbd!4v1676895247502!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
