--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
     </div>
   </div>
 
-
-  <!-- <div class="raw p-2" id="slider">
+<!-- 
+  <div class="slider" id="slider">
     <div class="container">
-      <div id="carouselExample" class="carousel slide"  data-bs-ride="true">
+      <div id="carouselExample" class="carousel slide p-2"  data-bs-ride="true">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="./img/slide1.jpg" class="d-block w-100" alt="...">
@@ -169,7 +169,7 @@
         </div>
         <div class="col-lg-5 m-auto rounded-2 map">
           <h5>Find Us on Map</h5>
-          <iframe class="rounded-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.2311622569273!2d91.85876681548714!3d24.89009548403999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751aacd70cd7665%3A0xc8ae330ad72490dd!2sNorth%20East%20University%20Bangladesh!5e0!3m2!1sen!2sbd!4v1676895247502!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe class="rounded-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.2311622569273!2d91.85876681548714!3d24.89009548403999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751aacd70cd7665%3A0xc8ae330ad72490dd!2sNorth%20East%20University%20Bangladesh!5e0!3m2!1sen!2sbd!4v1676895247502!5m2!1sen!2sbd" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </div>
