--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 </head>
 <body>
   <header class="header">
-    <div class="container mybg">
+    <div class="container">
       <div class="row">
-        <div class="col-lg-3 col-md-4">
+        <!-- <div class="col-lg-3 col-md-4"> -->
           <a class="p-2" href="#"><img class="p-2" src="./img/logo.png" alt="varsity logo" id="logo"></a>
-        </div>
-        <div class="col-lg-9 col-md-12">
+        <!-- </div> -->
+      </div>
+
+    </div>
+  </header>
+
+
+  <div class="menu">
+    <div class="container">
+      <div class="row">
+        <!-- <div class="col-lg-9 col-md-12"> -->
           <nav class="navbar navbar-expand-md mybg">
             <div class="container-fluid">
               <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,17 +62,7 @@
               </div>
             </div>
           </nav>
-        </div>
-
-      </div>
-    </div>
-  </header>
-
-
-  <div class="menu">
-    <div class="container">
-      <div class="row">
-        ___________________________________
+        <!-- </div> -->
       </div>
     </div>
   </div>
@@ -172,6 +171,12 @@
           <iframe class="rounded-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.2311622569273!2d91.85876681548714!3d24.89009548403999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751aacd70cd7665%3A0xc8ae330ad72490dd!2sNorth%20East%20University%20Bangladesh!5e0!3m2!1sen!2sbd!4v1676895247502!5m2!1sen!2sbd" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="copy">
+    <div class="container">
+      <h6 class="text-light text-center pt-1">Copyright © 2023 North East University Bangladesh.</h6>
     </div>
   </div>
 
