--- a/index.html
+++ b/index.html
@@ -121,6 +121,39 @@
               <span class="breadcrumb-item active" aria-current="page">Active</span>
             </nav>
             
+            <div class="row row-cols-1 row-cols-lg-3 g-4">
+              <div class="col">
+                <div class="card">
+                  <img src="./img/card_vc.jpg" height="250" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h6 class="card-title">Message from Vice Chancellor </h6>
+                    <p class="card-text">It gives me immense pleasure to offer a message of goodwill, prosperity and welcome to all those... </p>
+                    <button type="button" class="btn btn-outline-info">Read More</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img src="./img/card_ch.jpg" height="250" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h6 class="card-title">Message from Chairman</h6>
+                    <p class="card-text">We, the people of Sylhet hailing from different ages, profession and political beliefs and united under the aegis</p>
+                    <button type="button" class="btn btn-outline-info">Read More</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img src="./img/card_v.jpg" height="250" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h6 class="card-title">About NEUB</h6>
+                    <p class="card-text"><b> Introduction: </b>the present world has been passing through inevitable but irreversible process of globalization.  </p>
+                    <button type="button" class="btn btn-outline-info">Read More</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
         <div class="col-lg-3 col-md-5 right p-0">
