--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
         <!-- <div class="col-lg-9 col-md-12"> -->
-          <nav class="navbar navbar-expand-md mybg">
+          <nav class="navbar navbar-expand-md mybg p-0">
             <div class="container-fluid">
               <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
                   <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="#">HOME</a></li>
 <!-- ____________________________________________________________________________________________________________________________________________________________________________________________________________ -->
                   <li class="nav-item dropdown ddmp">
-                    <a class="nav-link dropdown-toggle rounded-2 myfs " href="#" role="button" onclick="dropMBL('#ddm0')">AUTHORITY</a>
+                    <a class="nav-link dropdown-toggle myfs " href="#" role="button" onclick="dropMBL('#ddm0')">AUTHORITY</a>
                     <!-- for pc -->
                     <ul class=" ddmu" id="ddm0">
                       <li class="ddml"><a href="" class="ddma"> Board of Trustees  </a></li>
