--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
   <link rel="stylesheet" href="./css/bootstrap.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +26,7 @@
     <div class="container">
       <div class="row">
         <!-- <div class="col-lg-9 col-md-12"> -->
-          <nav class="navbar navbar-expand-md mybg p-0">
+          <nav class="navbar navbar-expand-md mybg p-0" id="nav">
             <div class="container-fluid">
               <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
