--- a/gala/email_2022.html
+++ b/gala/email_2022.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>North East University Bangladesh</title>
+  <title>STB | Townstar 2022</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Crimson+Pro">
   <link rel="stylesheet" href="./css/bootstrap.css">
   <link rel="stylesheet" href="./style.css">
+  <style>.container{max-width: 1700px;}</style>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./script.js"></script><script src="./js/jquery-3.6.3.min.js"></script>
@@ -17,20 +18,20 @@
 <div class="container">
   <div class="row">
     <div class="shadow-lg p-3 bg-body rounded text-center">
-      <h1 class="mb-5">Welcome to STV</h1>
+      <h1 class="mb-5">Welcome to STB</h1>
       <!-- Nav tabs -->
       <ul class="nav nav-tabs mb-3" id="navId" role="tablist">
-        <li class="nav-item"><a href="./create_gala.html" class="nav-link" >Create Gala</a></li>
         <li class="nav-item"><a href="./email_2022.html" class="nav-link active" >Townstar 2022</a></li>
         <li class="nav-item"><a href="./email_2023.html" class="nav-link" >Townstar 2023</a></li>
+        <li class="nav-item"><a href="https://discord.com/app" class="nav-link" target="_blank" >Discord</a></li>
+        <li class="nav-item"><a href="https://app.gala.games/" class="nav-link" target="_blank" >Gala</a></li>
         <li class="nav-item ms-auto">
-          <a href="./logout.php" class="nav-link" >Logout</a>
+          <a href="./logout.php" class="nav-link" id="logout">Logout</a>
         </li>
       </ul>
       <h2 class="shadow-sm p-2 me-2">Play Townstar (2022)</h2>
-
+      <div id="time"> </div>
       <div id="prog"></div>
-      
 
   
 
@@ -44,7 +45,9 @@
         <table class="table table-hover text-start table-striped table-bordered border-dark">
             <thead>
                 <tr>
+                    <th scope="col">S</th>
                     <th scope="col">Email</th>
+                    <th scope="col" class="text-center">E_pass</th>
                     <th scope="col" class="text-center">PC</th>
                     <th scope="col" class="text-center">Player</th>
                     <th scope="col" class="text-center">Discord</th>
@@ -186,7 +189,7 @@
             var data= JSON.parse(response);
             
             if( data.status){
-                // location.replace("./login.html");
+              $("#logout").text("Logout ("+data.user+")");
             } else if(! data.status){
                  location.replace("./login.html");
             }
@@ -196,7 +199,9 @@
       load_table();
       const timeID = setInterval(load_table, 1000);
       function load_table(){
-        console
+        const utcStr = new Date().toUTCString();
+
+       $("#time").text(utcStr);
         $.ajax({
           type: "POST",
           url: "./email_list_2022.php",
