--- a/login.html
+++ b/login.html
@@ -131,7 +131,7 @@
     $(document).ready(function(){
       $.ajax({
         type: "POST",
-        url: "./get_user.php",
+        url: "./database/get_user.php",
         success: function (response) {
           var data= JSON.parse(response);
           if(data.status){
@@ -140,13 +140,13 @@
         }
       });
 
-      // navbar setup 
-      $.ajax({
-        url: "menu_log.php",
-        success: function (response) {
-          $('#menu').append(response);
-        }
-      });
+  // navbar setup 
+  $.ajax({
+    url: "./database/menu_log.php",
+    success: function (response) {
+      $('#menu').append(response);
+    }
+  });
 
 //login button
       $('#error_login').hide();
@@ -154,7 +154,7 @@
         e.preventDefault();
         $.ajax({
           type: "POST",
-          url: "./login.php",
+          url: "./database/login.php",
           data: $('#form_login').serialize(),
           success: function (response) {
             var data=JSON.parse(response);
