--- a/gala/create_discord_2023.html
+++ b/gala/create_discord_2023.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,9 +21,8 @@
             border: 10 px solid #fff;
             border-radius: 10 px;
             z-index: 9;
-          }
-          
-  </style>
+          }          
+</style>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./script.js"></script><script src="./js/jquery-3.6.3.min.js"></script>
@@ -54,14 +49,15 @@
       <ul class="nav nav-tabs mb-3" id="navId" role="tablist">
         <li class="nav-item"><a href="./email_2022.html" class="nav-link" >Townstar 2022</a></li>
         <li class="nav-item"><a href="./email_2023.html" class="nav-link ">Townstar 2023</a></li>
-        <li class="nav-item"><a href="./create_discord.html" class="nav-link active">Create Discord</a></li>
+        <li class="nav-item"><a href="./create_discord_2022.html" class="nav-link ">Create Discord 22</a></li>
+        <li class="nav-item"><a href="./create_discord_2023.html" class="nav-link active">Create Discord 23</a></li>
         <li class="nav-item"><a href="https://discord.com/app" class="nav-link" target="_blank" >Discord</a></li>
         <li class="nav-item"><a href="https://app.gala.games/" class="nav-link" target="_blank" >Gala</a></li>
         <li class="nav-item ms-auto">
           <a href="./logout.php" class="nav-link" id="logout">Logout</a>
         </li>
       </ul>
-      <h2 class="shadow-sm p-2 me-2">Play Townstar (2023)</h2>
+      <h2 class="shadow-sm p-2 me-2">Discord 2023</h2>
       
       <div id="time">
       </div>
