--- a/old design/tmp.html
+++ b/old design/tmp.html
@@ -1,3 +1,7 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,59 +17,80 @@
 
 
 
-
-  <!-- <div class="menu" id="menu"> -->
-  <div>
+  <header class="header">
     <div class="container">
-      <div class="row ">
+      <div class="row">
         <!-- <div class="col-lg-3 col-md-4"> -->
-          <a class="p-2 header" href="#"><img class="p-2" src="./img/logo.png" alt="varsity logo" id="logo"></a>
+          <a class="p-2" href="#"><img class="p-2" src="./img/logo.png" alt="varsity logo" id="logo"></a>
         <!-- </div> -->
       </div>
-      <div class="row pb-2">
-          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+    </div>
+  </header>
+
+
+  <div class="menu" id="menu">
+    <div class="container">
+      <div class="row">
+          <nav class="navbar navbar-expand-md mybg p-0" id="nav">
+            <div class="m-auto">
+              <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <ul class="navbar-nav ms-lg-auto mb-2 mb-lg-0 mybg" id="nav_menu">
+                  <li class="nav-item "><a class="nav-link rounded-2 myfs" aria-current="page" href="./index.html">HOME</a>
+                  </li>               
+                  <li class="nav-item dropdown ddmp">
+                    <a class="nav-link dropdown-toggle myfs " href="#" role="button" onclick="dropMBL('#ddm0')">AUTHORITY</a>
+                    <ul class=" ddmu" id="ddm0">
+                      <li class="ddml"><a href="" class="ddma"> Board of Trustees  </a></li>
+                      <li class="ddml"><a href="" class="ddma"> Board of Advisors  </a></li>
+                      <li class="ddml"><a href="" class="ddma"> Syndicate  </a></li>
+                      <li class="ddml"><a href="" class="ddma">  Academic Council </a></li>
+                      <li class="ddml"><a href="" class="ddma"> Proctorial body  </a></li>
+                      <li class="ddml"><a href="" class="ddma">  Complaint Committee </a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                  <li class="nav-item dropdown ddmp">
+                    <a class="nav-link dropdown-toggle rounded-2 myfs " id="ddb1" href="#" role="button" onclick="dropMBL('ddm1')">ACADEMIC</a>
+        
+                    <ul class=" ddmu" id="ddm1">
+                      <li class="ddml"><a href="" class="ddma"> School of Business</a></li>
+                      <li class="ddml"><a href="" class="ddma"> School of Social Science</a></li>
+                      <li class="ddml"><a href="" class="ddma"> School of Law and Justice</a></li>
+                      <li class="ddml"><a href="" class="ddma"> School of Natural Science and Engineering</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown ddmp" id="nav_li_tp">
+                    <a class="nav-link dropdown-toggle rounded-2 myfs " id="ddb_tp" href="#" role="button" onclick="dropMBL('ddmtp')">Teacher's Portal</a>
+                    <ul class=" ddmu" id="ddmtp">
+                      <li class="ddml"><a href="./course_offer.html" class="ddma"> Course Offer</a></li>
+                      <li class="ddml"><a href="./course_reg.html" class="ddma"> Course Registration</a></li>
+                      <li class="ddml"><a href="./result_publish.html" class="ddma"> Result Publish</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item dropdown ddmp" id="nav_li_login">
+                    <a class="nav-link rounded-2 myfs" aria-current="page" href="./login.html" onclick="dropMBL('#ddm1')" id="nav_login">Login</a>
                   </li>
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
               </div>
             </div>
           </nav>
       </div>
-      <div class="row pb-2">
-        <div class=" col-lg-9 col-md-7 left p-0 pe-2">
+    </div>
+    
+  </div>
 
 
 
-          <div class="body p-2  shadow-lg">
+
+
+  <div id="main">
+    <div class="container">
+      <div class="row">
+        <div class=" col-lg-9 col-md-7 left p-0 pe-1">
+          <div class="body p-2">
             <nav class="breadcrumb p-2 rounded-2">
               <a class="breadcrumb-item" href="#">Home</a>
               <a class="breadcrumb-item" href="#">Student</a>
@@ -97,7 +122,13 @@
           </div>
         </div>
       </div>
-      <div class="row pb-2 footer">
+    </div>
+  </div>
+
+
+  <div class="footer ">
+    <div class="container">
+      <div class="row  p-2 ">
         <div class="col-lg-4 left">
           <h5>Contact Us</h5>
             <p> <b>Address :</b> Telihaor, Sheikhghat, Sylhet-3100 <br>
@@ -123,19 +154,38 @@
           <iframe class="rounded-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3619.2311622569273!2d91.85876681548714!3d24.89009548403999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3751aacd70cd7665%3A0xc8ae330ad72490dd!2sNorth%20East%20University%20Bangladesh!5e0!3m2!1sen!2sbd!4v1676895247502!5m2!1sen!2sbd" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
-      <div class=" row copy">
-        <h6 class="text-light text-center pt-1">Copyright © 2023 North East University Bangladesh.</h6>
-      </div>
     </div>
   </div>
 
-  
+  <div class="copy">
+    <div class="container">
+      <h6 class="text-light text-center pt-1">Copyright © 2023 North East University Bangladesh.</h6>
+    </div>
+  </div>
+
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
   <script src="./js/bootstrap.min.js"></script>
   <!-- <script src="./script.js"></script> -->
   <script src="./js/jquery-3.6.3.min.js"></script>
   <script type="text/javascript" src="./script.js"></script>
+<script>
+$(document).ready(function(){
 
+  loadNav();
+  //drop down menu on mbl device
+ 
+  function dropMBL(id){
+    alert('hi');
+    $(id).toggleClass("ddm_show");
+  }
+
+ // page personal script
+
+});
+</script>
 
 
 </body>
